--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
 
         <footer>
-          <small class="footer-text">Designed with ❤️ by Your Name</small>
+          <small class="footer-text">Designed with ❤️ by Fatima</small>
         </footer>
       </div>
     </div>
